--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Thouseeflee/event-workshop-test#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
